--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,47 +1,30 @@
-name: Release
+name: ci
 
 on:
-    workflow_call:
+  push:
+    branches:
+      - "main"
 
 jobs:
-    release:
-        runs-on: ubuntu-latest
-
-        permissions:
-            packages: write
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
-              with:
-                  fetch-depth: 0
-
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v2
-
-            - name: Docker Metadata
-              id: docker-metadata
-              uses: docker/metadata-action@v4
-              with:
-                  images: ghcr.io/murar8/local-jwks-server
-                  tags: |
-                      type=semver,pattern={{version}}
-                      type=semver,pattern={{major}}
-                      type=edge,branch=main
-                      type=sha,prefix=
-
-            - name: Log in to GitHub Container Registry
-              uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
-              with:
-                  registry: ghcr.io
-                  username: ${{ github.actor }}
-                  password: ${{ secrets.GITHUB_TOKEN }}
-
-            - name: Build and Push
-              uses: docker/build-push-action@v4
-              with:
-                  push: true
-                  tags: ${{ steps.docker-metadata.outputs.tags }}
-                  labels: ${{ steps.docker-metadata.outputs.labels }}
-                  cache-from: type=gha,scope=$GITHUB_REF_NAME-app
-                  cache-to: type=gha,scope=$GITHUB_REF_NAME-app,mode=max
+  docker:
+    runs-on: ubuntu-latest
+    environment: release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/local-jwks-server:latest
